@@ -1,7 +1,5 @@
 Mnemosyne 1.1
 
--import filter plugin
-
 -polish shortcuts (tab + enter on search, enter same function as F3, 
 preview Alt-p). Reported by spboulet and varkhan1.
 
