@@ -56,6 +56,20 @@ def register_file_format(name, filter="",
 
 ##############################################################################
 #
+# unregister_file_format
+#
+##############################################################################
+
+def unregister_file_format(name)
+
+    global file_formats
+    
+    file_formats.remove(get_file_format_from_name(name))
+
+	
+
+##############################################################################
+#
 # get_importable_file_formats
 #
 ##############################################################################
